--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t espyl0n/docker-react -f Dockerfile.dev .
+  - docker build -t epsyl0n/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true epsyl0n/docker-react npm run test
